--- a/EmployeeNomination.htm
+++ b/EmployeeNomination.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="CSS/EmployeeNominationCSS.css">
     <title> Employee Nomination </title>
 </head>
 <body>
@@ -45,7 +45,7 @@
         <h4>Current Nomination</h4>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -54,7 +54,7 @@
         </div>
         <div class="container" ">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -63,7 +63,7 @@
         </div>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -72,7 +72,7 @@
         </div>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -90,7 +90,7 @@
         <h4>Previous Nomination</h4>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -99,7 +99,7 @@
         </div>
         <div class="container" ">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -108,7 +108,7 @@
         </div>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
@@ -117,7 +117,7 @@
         </div>
         <div class="container"">
             <div>
-                <img class="photo" alt="Profile Picture" src="WhatsApp Image 2023-02-22 at 23.23.04.jpg">
+                <img class="photo" alt="Profile Picture" src="PIC/profilePicture.jpg">
             </div>
             <div class="info">
                 <h4>Mohamed Tarek</h4>
