--- a/AdminPage.html
+++ b/AdminPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,89 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/loader.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="CSS/nav.css">
+
 
 </head>
+
+<body>
+    <div class="navbar">
+        <!-- Left side: Logo -->
+        <div class="logo">
+            <a href="../ITWorx/index.html">
+                <img src="../ITWorx/PIC/ITWorx_logo.png" alt="Logo" width="100" height="25">
+            </a>
+        </div>
+
+        <!-- Center: Navigation links -->
+        <ul id="nav-links">
+            <li><a href="#">Time Off</a></li>
+            <li><a href="#">Benefits</a></li>
+            <li><a href="#">Compensation</a></li>
+            <li><a href="#">Learning</a></li>
+            <li><a href="#">Feedback</a></li>
+        </ul>
+
+        <!-- Right side: Search, Help, Profile, and Login/Logout Icon -->
+        <div class="actions">
+            <button>
+                <i class="fas fa-search"></i>
+            </button>
+            <button>
+                <i class="fa-solid fa-question"></i>
+            </button>
+            <button id="auth-button" class="btn">
+                <i class="fas fa-user"></i> <!-- Placeholder for Login/Logout Icon -->
+            </button>
+        </div>
+    </div>
+
+    <script>
+        // Function to update the auth button based on login status
+        function updateAuthButton() {
+            var loggedIn = localStorage.getItem('loggedIn');
+            var authButton = document.getElementById('auth-button');
+
+            if (loggedIn === 'true') {
+                authButton.innerHTML = '<i class="fas fa-sign-out-alt"></i> ';
+                authButton.addEventListener('click', function() {
+                    localStorage.removeItem('loggedIn');
+                    window.location.reload(); // Reload the page to update the navbar
+                });
+
+                // Show the Dashboard link
+                var navLinks = document.getElementById('nav-links');
+                var dashboardLink = document.createElement('li');
+                dashboardLink.innerHTML = '<a href="AdminPage.html">Dashboard</a>';
+                navLinks.prepend(dashboardLink);
+
+            } else {
+                authButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> ';
+                authButton.addEventListener('click', function() {
+                    window.location.href = 'login.html';
+                });
+            }
+        }
+
+        // Run the function when the page loads
+        document.addEventListener('DOMContentLoaded', updateAuthButton);
+    </script>
+</body>
+
 <body>
     <main>
-    <?php include '../ITWorx/navbar.php'; ?>
-    <?php include '../ITWorx/loader.php'; ?>
+        <div class="loader loader--active">
+            <div class="loader__icon">
+            </div>
+            <div class="loader__tiles">
+                <div class="loader__tile"></div>
+                <div class="loader__tile"></div>
+                <div class="loader__tile"></div>
+                <div class="loader__tile"></div>
+                <div class="loader__tile"></div>
+            </div>
+        </div>
 
         <div class="view">
             <div class="side-bar">
@@ -49,7 +127,9 @@
                             <p class="name">John</p>
                             <p class="votes">Votes: 15</p>
                         </div>
-                        <div class="percent"><p>70%</p></div>
+                        <div class="percent">
+                            <p>70%</p>
+                        </div>
                     </div>
                 </a>
                 <a href="./NomineeProfile.php">
@@ -59,7 +139,9 @@
                             <p class="name">John</p>
                             <p class="votes">Votes: 15</p>
                         </div>
-                        <div class="percent"><p>70%</p></div>
+                        <div class="percent">
+                            <p>70%</p>
+                        </div>
                     </div>
                 </a>
                 <a href="./NomineeProfile.php">
@@ -69,7 +151,9 @@
                             <p class="name">John</p>
                             <p class="votes">Votes: 15</p>
                         </div>
-                        <div class="percent"><p>70%</p></div>
+                        <div class="percent">
+                            <p>70%</p>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -82,4 +166,5 @@
         };
     </script>
 </body>
+
 </html>
