--- a/index.html
+++ b/index.html
@@ -7,13 +7,88 @@
     <title>Employee of the Month</title>
     <link rel="stylesheet" href="CSS/1.css">
     <link rel="stylesheet" href="CSS/loader.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="CSS/nav.css">
+
 
 </head>
 
 <body>
-    <?php include '../ITWorx/navbar.php'; ?>
-    <?php include '../ITWorx/loader.php'; ?>
+    <div class="navbar">
+        <!-- Left side: Logo -->
+        <div class="logo">
+            <a href="../ITWorx/index.html">
+                <img src="../ITWorx/PIC/ITWorx_logo.png" alt="Logo" width="100" height="25">
+            </a>
+        </div>
 
+        <!-- Center: Navigation links -->
+        <ul id="nav-links">
+            <li><a href="#">Time Off</a></li>
+            <li><a href="#">Benefits</a></li>
+            <li><a href="#">Compensation</a></li>
+            <li><a href="#">Learning</a></li>
+            <li><a href="#">Feedback</a></li>
+        </ul>
+
+        <!-- Right side: Search, Help, Profile, and Login/Logout Icon -->
+        <div class="actions">
+            <button>
+                <i class="fas fa-search"></i>
+            </button>
+            <button>
+                <i class="fa-solid fa-question"></i>
+            </button>
+            <button id="auth-button" class="btn">
+                <i class="fas fa-user"></i> <!-- Placeholder for Login/Logout Icon -->
+            </button>
+        </div>
+    </div>
+
+    <script>
+        // Function to update the auth button based on login status
+        function updateAuthButton() {
+            var loggedIn = localStorage.getItem('loggedIn');
+            var authButton = document.getElementById('auth-button');
+
+            if (loggedIn === 'true') {
+                authButton.innerHTML = '<i class="fas fa-sign-out-alt"></i> ';
+                authButton.addEventListener('click', function() {
+                    localStorage.removeItem('loggedIn');
+                    window.location.reload(); // Reload the page to update the navbar
+                });
+
+                // Show the Dashboard link
+                var navLinks = document.getElementById('nav-links');
+                var dashboardLink = document.createElement('li');
+                dashboardLink.innerHTML = '<a href="AdminPage.html">Dashboard</a>';
+                navLinks.prepend(dashboardLink);
+
+            } else {
+                authButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> ';
+                authButton.addEventListener('click', function() {
+                    window.location.href = 'login.html';
+                });
+            }
+        }
+
+        // Run the function when the page loads
+        document.addEventListener('DOMContentLoaded', updateAuthButton);
+    </script>
+</body>
+
+<body>
+    <div class="loader loader--active">
+        <div class="loader__icon">
+        </div>
+        <div class="loader__tiles">
+            <div class="loader__tile"></div>
+            <div class="loader__tile"></div>
+            <div class="loader__tile"></div>
+            <div class="loader__tile"></div>
+            <div class="loader__tile"></div>
+        </div>
+    </div>
     <!-- Loader (Initially Hidden) -->
 
     <div class="container wrapper">
