--- a/EmployeeNomination.html
+++ b/EmployeeNomination.html
@@ -253,7 +253,7 @@
       document.querySelector(".photo").addEventListener("click", function () {
         loader.classList.add("loader--active");
         setTimeout(function () {
-          window.location.href = "nominate.php";
+          window.location.href = "nominate.html";
         }, 2500);
       });
     </script>
