--- a/index.html
+++ b/index.html
@@ -141,25 +141,25 @@
         document.querySelector('.btn2').addEventListener('click', function() {
             $loader.classList.add('loader--active');
             setTimeout(function() {
-                window.location.href = 'NomineeProfile.php';
+                window.location.href = 'NomineeProfile.html';
             }, 2500); // 2 seconds delay
         });
         document.querySelector('.btn3').addEventListener('click', function() {
             $loader.classList.add('loader--active');
             setTimeout(function() {
-                window.location.href = 'NomineeProfile.php';
+                window.location.href = 'NomineeProfile.html';
             }, 2500); // 2 seconds delay
         });
         document.querySelector('.btn4').addEventListener('click', function() {
             $loader.classList.add('loader--active');
             setTimeout(function() {
-                window.location.href = 'NomineeProfile.php';
+                window.location.href = 'NomineeProfile.html';
             }, 2500); // 2 seconds delay
         });
         document.querySelector('.btnn').addEventListener('click', function() {
             $loader.classList.add('loader--active');
             setTimeout(function() {
-                window.location.href = 'EmployeeNomination.php';
+                window.location.href = 'EmployeeNomination.html';
             }, 2500); // 2 seconds delay
         });
     </script>
