--- a/login.html
+++ b/login.html
@@ -195,7 +195,7 @@
             // Simple frontend validation
             if (email === '1' && password === '1') {
                 localStorage.setItem('loggedIn', 'true');
-                window.location.href = 'index.php';
+                window.location.href = 'index.html';
             } else {
                 alert('Invalid email or password.');
             }
