--- a/AdminPage.html
+++ b/AdminPage.html
@@ -120,7 +120,7 @@
                     <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <a href="./NomineeProfile.php">
+                <a href="./NomineeProfile.html">
                     <div class="nominee">
                         <img src="./PIC/profilePic.jpg" alt="Profile Picture">
                         <div class="text">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./NomineeProfile.php">
+                <a href="./NomineeProfile.html">
                     <div class="nominee">
                         <img src="./PIC/profilePic.jpg" alt="Profile Picture">
                         <div class="text">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./NomineeProfile.php">
+                <a href="./NomineeProfile.html">
                     <div class="nominee">
                         <img src="./PIC/profilePic.jpg" alt="Profile Picture">
                         <div class="text">
