--- a/nominate.html
+++ b/nominate.html
@@ -131,7 +131,7 @@
         document.querySelector('.photo').addEventListener('click', function() {
             $loader.classList.add('loader--active');
             setTimeout(function() {
-                window.location.href = 'nominate.php';
+                window.location.href = 'nominate.html';
             }, 2500); // 2 seconds delay
         });
     </script>
