--- a/login.html
+++ b/login.html
@@ -6,155 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="CSS/loader.css">
-    <style>
-        /* Reset some default styles */
-        body,
-        h2,
-        form {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .content {
-            margin-top: 60px;
-            margin-left: 500px;
-            width: 100%;
-            max-width: 400px;
-        }
-
-        .wrapper {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            text-align: center;
-            color: #333;
-        }
-
-        .input-box {
-            margin-bottom: 15px;
-            position: relative;
-        }
-
-        .input-box input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        .input-box .error {
-            color: red;
-            font-size: 0.875em;
-            position: absolute;
-            bottom: -20px;
-            left: 10px;
-        }
-
-        .policy {
-            margin: 10px 0;
-        }
-
-        .policy h3 {
-            display: inline;
-            margin-left: 8px;
-            color: #333;
-        }
-
-        .button input {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            background-color: #e74c3c;
-            color: #fff;
-            font-size: 1em;
-            cursor: pointer;
-        }
-
-        .button input:hover {
-            background-color: #c0392b;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="CSS/nav.css">
 </head>
 
 <body>
     <div class="navbar">
-        <!-- Left side: Logo -->
-        <div class="logo">
-            <a href="../ITWorx/index.html">
-                <img src="../ITWorx/PIC/ITWorx_logo.png" alt="Logo" width="100" height="25">
-            </a>
-        </div>
+      <!-- Left side: Logo -->
+      <div class="logo">
+        <a href="../ITWorx/index.html">
+          <img
+            src="../ITWorx/PIC/ITWorx_logo.png"
+            alt="Logo"
+            width="100"
+            height="25"
+          />
+        </a>
+      </div>
 
-        <!-- Center: Navigation links -->
-        <ul id="nav-links">
-            <li><a href="#">Time Off</a></li>
-            <li><a href="#">Benefits</a></li>
-            <li><a href="#">Compensation</a></li>
-            <li><a href="#">Learning</a></li>
-            <li><a href="#">Feedback</a></li>
-        </ul>
+      <!-- Burger icon -->
+      <div class="burger" id="burger-icon">
+        <i class="fas fa-bars"></i>
+      </div>
 
-        <!-- Right side: Search, Help, Profile, and Login/Logout Icon -->
-        <div class="actions">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
-            <button>
-                <i class="fa-solid fa-question"></i>
-            </button>
-            <button id="auth-button" class="btn">
-                <i class="fas fa-user"></i> <!-- Placeholder for Login/Logout Icon -->
-            </button>
-        </div>
+      <!-- Center: Navigation links -->
+      <ul id="nav-links">
+        <li><a href="#">Time Off</a></li>
+        <li><a href="#">Benefits</a></li>
+        <li><a href="#">Compensation</a></li>
+        <li><a href="#">Learning</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+
+      <!-- Right side: Search, Help, Profile, and Login/Logout Icon -->
+      <div class="actions">
+        <button>
+          <i class="fas fa-search"></i>
+        </button>
+        <button>
+          <i class="fa-solid fa-question"></i>
+        </button>
+        <button id="auth-button" class="btn">
+          <i class="fas fa-user"></i>
+          <!-- Placeholder for Login/Logout Icon -->
+        </button>
+      </div>
     </div>
 
     <script>
-        // Function to update the auth button based on login status
-        function updateAuthButton() {
-            var loggedIn = localStorage.getItem('loggedIn');
-            var authButton = document.getElementById('auth-button');
+      // Function to update the auth button based on login status
+      function updateAuthButton() {
+        var loggedIn = localStorage.getItem("loggedIn");
+        var authButton = document.getElementById("auth-button");
 
-            if (loggedIn === 'true') {
-                authButton.innerHTML = '<i class="fas fa-sign-out-alt"></i> ';
-                authButton.addEventListener('click', function() {
-                    localStorage.removeItem('loggedIn');
-                    window.location.reload(); // Reload the page to update the navbar
-                });
+        if (loggedIn === "true") {
+          authButton.innerHTML = '<i class="fas fa-sign-out-alt"></i> ';
+          authButton.addEventListener("click", function () {
+            localStorage.removeItem("loggedIn");
+            window.location.reload(); // Reload the page to update the navbar
+          });
 
-                // Show the Dashboard link
-                var navLinks = document.getElementById('nav-links');
-                var dashboardLink = document.createElement('li');
-                dashboardLink.innerHTML = '<a href="AdminPage.html">Dashboard</a>';
-                navLinks.prepend(dashboardLink);
-
-            } else {
-                authButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> ';
-                authButton.addEventListener('click', function() {
-                    window.location.href = 'login.html';
-                });
-            }
+          // Show the Dashboard link
+          var navLinks = document.getElementById("nav-links");
+          var dashboardLink = document.createElement("li");
+          dashboardLink.innerHTML = '<a href="AdminPage.html">Dashboard</a>';
+          navLinks.prepend(dashboardLink);
+        } else {
+          authButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> ';
+          authButton.addEventListener("click", function () {
+            window.location.href = "login.html";
+          });
         }
+      }
 
-        // Run the function when the page loads
-        document.addEventListener('DOMContentLoaded', updateAuthButton);
+      // Run the function when the page loads
+      document.addEventListener("DOMContentLoaded", updateAuthButton);
     </script>
-</body>
+
+    <script>
+      document
+        .getElementById("burger-icon")
+        .addEventListener("click", function () {
+          var navLinks = document.getElementById("nav-links");
+          navLinks.classList.toggle("active");
+        });
+    </script>
+  </body>
 
 <body>
     <div class="loader loader--active">
